Changes to allow desktop build. Upgrade to lwjgl3. Change "setWindowSizeLimits" based on updated API.

--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -1,3 +1,6 @@
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx1500m
 org.gradle.configureondemand=false
+compileJava.options.fork = true
+compileJava.options.forkOptions.executable = '/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java'
+org.gradle.java.home = /usr/lib/jvm/java-8-openjdk-amd64
